Bumped dmt bundle version to 7.0.0, requires framework 1.9, removed require capability osgi.ee